[package]
name = "advent"
version = "0.1.0"
authors = ["John Downey <jdowney@gmail.com>"]

[lib]
name = "common"
path = "src/common/lib.rs"

[dependencies]
error-chain = "^0.7"
num-integer = "^0.1"
interval_tree = "^0.2"
itertools = "^0.5"
lazy_static = "^0.2"
permutohedron = "^0.2"
regex = "^0.1"
rust-crypto = "^0.2"
